[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/iceTile.tres" type="TileSet" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/objTile.tres" type="TileSet" id=3]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=6]
[ext_resource path="res://Assets/IcepuzzleLoop.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scripts/TooHeavy.gd" type="Script" id=8]
[ext_resource path="res://Level4.tscn" type="PackedScene" id=9]

[node name="Main" type="Node"]
script = ExtResource( 6 )

[node name="Floor" type="TileMap" parent="."]
z_index = -20
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 0, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 0, 196609, 65556, 0, 196611, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 65566, 1, 0, 65567, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 0, 131072, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 131102, 1, 0, 131103, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 196636, 1, 0, 196637, 1, 0, 196638, 1, 0, 196639, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 1, 0, 262171, 1, 0, 262172, 1, 0, 262173, 1, 0, 262174, 1, 0, 262175, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 0, 8, 327685, 0, 11, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 0, 196608, 327705, 1, 0, 327706, 1, 0, 327707, 1, 0, 327708, 1, 0, 327709, 1, 0, 327710, 1, 0, 327711, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 0, 8, 393220, 0, 65545, 393221, 0, 196619, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 0, 196608, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 0, 8, 458755, 0, 65545, 458756, 0, 196619, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 0, 196616, 524291, 0, 196619, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 589855, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 655387, 1, 0, 655388, 1, 0, 655389, 1, 0, 655390, 1, 0, 655391, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 0, 196608, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 0, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 0, 196608, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 0, 196609, 786448, 0, 196611, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0, 786459, 1, 0, 786460, 1, 0, 786461, 1, 0, 786462, 1, 0, 786463, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 0, 131072, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 0, 196608, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 1, 0, 1114141, 1, 0, 1114142, 1, 0, 1114143, 1, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 0, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 0, 65536, 1245195, 1, 0, 1245196, 1, 0, 1245197, 1, 0, 1245198, 1, 0, 1245199, 1, 0, 1245200, 1, 0, 1245201, 1, 0, 1245202, 1, 0, 1245203, 1, 0, 1245204, 1, 0, 1245205, 1, 0, 1245206, 1, 0, 1245207, 1, 0, 1245208, 1, 0, 1245209, 1, 0, 1245210, 1, 0, 1245211, 1, 0, 1245212, 1, 0, 1245213, 1, 0, 1245214, 1, 0, 1245215, 1, 0, 1245216, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 0, 65536, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 0, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 1, 0, 1310744, 1, 0, 1310745, 1, 0, 1310746, 1, 0, 1310747, 0, 8, 1310748, 0, 11, 1310749, 1, 0, 1310750, 1, 0, 1310751, 1, 0, 1310752, 1, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 0, 131072, 1376267, 1, 0, 1376268, 1, 0, 1376269, 1, 0, 1376270, 1, 0, 1376271, 0, 65536, 1376272, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 0, 0, 1376276, 1, 0, 1376277, 1, 0, 1376278, 1, 0, 1376279, 1, 0, 1376280, 0, 0, 1376281, 1, 0, 1376282, 1, 0, 1376283, 0, 196616, 1376284, 0, 196619, 1376285, 1, 0, 1376286, 1, 0, 1376287, 1, 0, 1376288, 1, 0, 1441792, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 0, 0, 1441805, 1, 0, 1441806, 1, 0, 1441807, 0, 131073, 1441808, 0, 196611, 1441809, 1, 0, 1441810, 1, 0, 1441811, 0, 131073, 1441812, 0, 3, 1441813, 1, 0, 1441814, 1, 0, 1441815, 0, 1, 1441816, 0, 131075, 1441817, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 1, 0, 1441822, 1, 0, 1441823, 1, 0, 1441824, 1, 0, 1507328, 1, 0, 1507329, 1, 0, 1507330, 1, 0, 1507331, 1, 0, 1507332, 1, 0, 1507333, 1, 0, 1507334, 1, 0, 1507335, 1, 0, 1507336, 1, 0, 1507337, 1, 0, 1507338, 1, 0, 1507339, 0, 196609, 1507340, 0, 131074, 1507341, 0, 196611, 1507342, 1, 0, 1507343, 1, 0, 1507344, 1, 0, 1507345, 1, 0, 1507346, 1, 0, 1507347, 1, 0, 1507348, 0, 131072, 1507349, 1, 0, 1507350, 1, 0, 1507351, 0, 131072, 1507352, 1, 0, 1507353, 1, 0, 1507354, 1, 0, 1507355, 1, 0, 1507356, 1, 0, 1507357, 1, 0, 1507358, 1, 0, 1507359, 1, 0, 1507360, 1, 0, 1572869, 1, 0, 1572870, 1, 0, 1572871, 1, 0, 1572872, 1, 0, 1572873, 1, 0, 1572874, 1, 0, 1572895, 1, 0, 1572896, 1, 0 )

[node name="Objects" type="TileMap" parent="Floor"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_y_sort = true
collision_layer = 3
format = 1
tile_data = PoolIntArray( 65550, 4, 0, 131078, 2, 0, 131088, 1, 0, 131093, 2, 0, 196612, 4, 0, 196617, 0, 196609, 196618, 0, 196611, 196634, 2, 0, 262154, 1, 0, 262164, 0, 196609, 262165, 0, 196610, 262166, 0, 196610, 262167, 0, 196611, 327692, 0, 196609, 327693, 0, 196610, 327694, 0, 196610, 327695, 0, 196611, 327696, 2, 0, 393224, 2, 0, 393228, 4, 0, 393236, 2, 0, 393242, 1, 0, 458757, 0, 0, 458763, 1, 0, 458769, 0, 196609, 458770, 0, 196610, 458771, 0, 196611, 458776, 2, 0, 524289, 0, 0, 524293, 0, 65536, 524297, 4, 0, 524298, 1, 0, 524306, 1, 0, 524310, 4, 0, 524316, 2, 0, 589825, 0, 65536, 589829, 0, 65536, 589833, 2, 0, 589839, 0, 0, 589847, 0, 0, 655360, 4, 0, 655361, 0, 131072, 655365, 0, 131072, 655367, 1, 0, 655375, 0, 65536, 655376, 2, 0, 655379, 0, 196609, 655380, 0, 196611, 655383, 0, 65536, 720900, 4, 0, 720905, 4, 0, 720909, 2, 0, 720911, 0, 131072, 720914, 4, 0, 720919, 0, 65536, 720926, 4, 0, 786440, 0, 196609, 786441, 0, 196610, 786442, 0, 196611, 786455, 0, 131072, 786457, 0, 0, 786458, 1, 0, 851968, 2, 0, 851976, 2, 0, 851990, 2, 0, 851993, 0, 131072, 917514, 2, 0, 917525, 1, 0, 983058, 2, 0, 983060, 4, 0, 983065, 1, 0, 1048576, 1, 0, 1048587, 2, 0, 1048589, 1, 0, 1048593, 4, 0, 1048597, 0, 196609, 1048598, 0, 196610, 1048599, 0, 196611, 1048607, 0, 196609, 1048608, 0, 196610, 1048609, 0, 196611, 1114114, 0, 0, 1114120, 1, 0, 1114126, 0, 196609, 1114127, 0, 196610, 1114128, 0, 196611, 1114140, 1, 0, 1179650, 0, 65536, 1179654, 4, 0, 1179660, 4, 0, 1179675, 0, 196609, 1179676, 0, 196610, 1179677, 0, 196611, 1245185, 1, 0, 1245186, 0, 131072, 1245197, 1, 0, 1245200, 4, 0, 1245202, 2, 0, 1245209, 4, 0, 1310722, 2, 0, 1376261, 4, 0, 1441801, 1, 0, 1507333, 0, 0, 1507345, 1, 0, 1507354, 2, 0, 1572869, 0, 131072, 1572872, 1, 0, 1572878, 1, 0 )

[node name="Player" parent="Floor/Objects" instance=ExtResource( 2 )]
position = Vector2( 464, 240 )

[node name="Ball" parent="Floor/Objects" instance=ExtResource( 4 )]
position = Vector2( 432, 304 )

[node name="Goal" parent="Floor/Objects" instance=ExtResource( 5 )]
position = Vector2( 576, 383.6 )
numOfBalls = 2
NextLevel = ExtResource( 9 )

[node name="Ball2" parent="Floor/Objects" instance=ExtResource( 4 )]
position = Vector2( 656, 304 )
scaleLevel = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 80.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer"]
margin_right = 80.0
margin_bottom = 20.0
text = "Reset"

[node name="WinPopop" type="AcceptDialog" parent="."]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
popup_exclusive = true
window_title = "You Won"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinMessage" type="Label" parent="WinPopop"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = -32.96
margin_top = -22.72
margin_right = 32.96
margin_bottom = -5.28
text = "That's a good snowman...

For a beginner"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LossPopup" type="AcceptDialog" parent="."]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
rect_clip_content = true
popup_exclusive = true

[node name="LossMessage" type="Label" parent="LossPopup"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = -32.96
margin_top = -22.72
margin_right = 32.96
margin_bottom = -5.28
text = "You can't put have a big head without a body to support it. Balance is key."
align = 1
valign = 1
autowrap = true

[node name="TooHeavy" type="Popup" parent="."]
anchor_left = 0.3
anchor_top = 1.0
anchor_right = 0.7
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TooHeavy"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="TooHeavy"]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
text = "That's a bit too heavy to push."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TooHeavy"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="moveDone" from="Floor/Objects/Player" to="." method="_on_Player_moveDone"]
[connection signal="moving" from="Floor/Objects/Player" to="." method="_on_Player_moving"]
[connection signal="moveDone" from="Floor/Objects/Ball" to="." method="_on_Ball_moveDone"]
[connection signal="moving" from="Floor/Objects/Ball" to="." method="_on_Ball_moving"]
[connection signal="tooHeavy" from="Floor/Objects/Ball" to="TooHeavy" method="_on_Ball_tooHeavy"]
[connection signal="failed" from="Floor/Objects/Goal" to="." method="_on_Goal_failed"]
[connection signal="wonLevel" from="Floor/Objects/Goal" to="." method="_on_Goal_wonLevel"]
[connection signal="moveDone" from="Floor/Objects/Ball2" to="." method="_on_Ball_moveDone"]
[connection signal="moving" from="Floor/Objects/Ball2" to="." method="_on_Ball_moving"]
[connection signal="tooHeavy" from="Floor/Objects/Ball2" to="TooHeavy" method="_on_Ball_tooHeavy"]
[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="confirmed" from="WinPopop" to="." method="_on_WinPopop_confirmed"]
[connection signal="confirmed" from="LossPopup" to="." method="_on_LossPopup_confirmed"]
[connection signal="tween_completed" from="TooHeavy/Tween" to="TooHeavy" method="_on_Tween_tween_completed"]
